8305252: make_method_handle_intrinsic may call java code under a lock